Fix alignment inside header, no huge paddings

--- a/css/style.css
+++ b/css/style.css
@@ -38,24 +38,30 @@ header {
 }
 
 .logo {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
     flex-basis: 100%;
     box-sizing: border-box;
-    min-width: 30%;
-    margin-left: 20px;
-    padding-top: 100px;
+    max-width: 450px;
     background: #FFF url("../img/logo.png") no-repeat center bottom;
     text-align: center;
 }
 
+.brand {
+    margin-top: 30px;
+    padding-top: 20px;
+}
+
 .contacts {
-    padding-top: 10px;
-    padding-left: 500px;
+    padding: 10px 10px 0;
+    text-align: right;
     line-height: 20px;
 }
 
 .countries {
     font-size: .6em;
-    padding-left: 320px;
+    text-align: right;
 }
 
 .countries > a {
